--- a/app/composer.json
+++ b/app/composer.json
@@ -46,6 +46,7 @@
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.4",
+        "nunomaduro/phpinsights": "^1.14",
         "psalm/plugin-symfony": "^2.3",
         "squizlabs/php_codesniffer": "*",
         "symfony/browser-kit": "^5.2",
@@ -90,6 +91,12 @@
         ],
         "post-update-cmd": [
             "@auto-scripts"
+        ],
+        "psalm": [
+            "./vendor/bin/psalm"
+        ],
+        "phpinsights": [
+            "./vendor/bin/phpinsights"
         ]
     },
     "conflict": {
