--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,8 +33,8 @@ services:
     command: sleep 10000
     container_name: ${PROJECT_NAME}-php-cli
   mysql:
-    image: mysql:8.0
-    #image: mysql/mysql-server:8.0.23
+    #image: mysql:8.0
+    image: mysql/mysql-server:8.0.23
     ports:
       - 33060:3306
     command: --default-authentication-plugin=mysql_native_password
